<resources>
    <string name="app_name">FragmentNavigation</string>
    <string name="gacha_button">Gacha</string>
    <string name="character_list_button">Character List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_1">Character 1</string>
    <string name="character_2">Character 2</string>
    <string name="character_3">Character 3</string>
    <string name="character_4">Character 4</string>
    <string name="character_5">Character 5</string>
    <string name="character_6">Character 6</string>
    <string name="character_7">Character 7</string>
    <string name="character_8">Character 8</string>
    <string name="character_9">Character 9</string>
    <string name="character_10">Character 10</string>
    <string name="back_to_home">Back to Home</string>
    <string name="gacha_again">Gacha Again</string>
</resources>