<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/character_9"
        android:src="@drawable/char9"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/btnGachaAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gacha_again"/>

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"/>
</LinearLayout>